clusters/infra/kube-system/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.10.10.55
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
#    - name: https
#      protocol: HTTPS
#      port: 443
#      allowedRoutes:
#        namespaces:
#          from: All
#      tls:
#        certificateRefs:
#          - kind: Secret
#            name: ${SECRET_DOMAIN/./-}-production-tls
